tests/semantic/valid/21_r4_builtin_sin_one_arg.hulk
function f() => print(sin(1));

f();
