tests/semantic/invalid/22_a4_redefine_builtin_sin.hulk
function sin(x) => x;

print(sin(1));
